Bug 582917 - load library from local lib folder if not in project
Load libarries from the local .lib folder if they are required in the
manifest file and they arent already loaded into the project

Change-Id: Ia8db0f66e2000a5636ea2212c38599910f2609ff
Signed-off-by: fabio.gandolfi <fabio.gandolfi@jku.at>